# adventofcode2025

./: Cargo.toml
.devcontainer/: devcontainer.json
common/: Cargo.toml
common/src/: grid.rs  lib.rs
day1/: Cargo.toml
day1/src/: lib.rs  lock.rs  main.rs
day10/: Cargo.toml
day10/src/: lib.rs  main.rs  parser.rs
day11/: Cargo.toml
day11/src/: lib.rs  main.rs
day12/: Cargo.toml
day12/src/: lib.rs  main.rs  parse.rs
day2/: Cargo.toml
day2/src/: lib.rs  main.rs
day3/: Cargo.toml
day3/src/: lib.rs  main.rs
day4/: Cargo.toml
day4/src/: lib.rs  main.rs
day5/: Cargo.toml
day5/src/: main.rs
day6/: Cargo.toml
day6/src/: lib.rs  main.rs
day7/: Cargo.toml
day7/src/: lib.rs  main.rs
day8/: Cargo.toml
day8/src/: lib.rs  main.rs
day9/: Cargo.toml
day9/src/: lib.rs  main.rs
