[workspace]
members = [
    "common",
    "day1", "day10", "day11", "day12",
    "day2",
    "day3",
    "day4",
    "day5",
    "day6",
    "day7",
    "day8", "day9",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
itertools = "0.14.0"
nom = "8.0.0"
pathfinding = "4.14.0"
petgraph = "0.8.3"
rayon = "1.11.0"
